test on formula

--- a/clean_spm.ipynb
+++ b/clean_spm.ipynb
@@ -791,55 +791,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/2686761353.py:9: FutureWarning:\n",
+      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/3485473308.py:9: FutureWarning:\n",
       "\n",
       "The provided callable <function mean at 0x1049ba980> is currently using DataFrameGroupBy.mean. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"mean\" instead.\n",
       "\n",
-      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/2686761353.py:9: FutureWarning:\n",
+      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/3485473308.py:9: FutureWarning:\n",
       "\n",
       "The provided callable <function std at 0x1049baac0> is currently using DataFrameGroupBy.std. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"std\" instead.\n",
       "\n",
-      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/2686761353.py:9: FutureWarning:\n",
+      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/3485473308.py:9: FutureWarning:\n",
       "\n",
       "The provided callable <built-in function min> is currently using DataFrameGroupBy.min. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"min\" instead.\n",
       "\n",
-      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/2686761353.py:9: FutureWarning:\n",
+      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/3485473308.py:9: FutureWarning:\n",
       "\n",
       "The provided callable <built-in function max> is currently using DataFrameGroupBy.max. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"max\" instead.\n",
       "\n",
-      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/2686761353.py:9: FutureWarning:\n",
+      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/3485473308.py:9: FutureWarning:\n",
       "\n",
       "The provided callable <function median at 0x104b1b740> is currently using DataFrameGroupBy.median. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"median\" instead.\n",
       "\n"
      ]
     },
     {
-     "ename": "KeyError",
-     "evalue": "'shapiro_stat'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/Downloads/github/.venv/lib/python3.12/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'shapiro_stat'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[35], line 22\u001b[0m\n\u001b[1;32m     17\u001b[0m pivot_table\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdistrict\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmean\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstandard deviation\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmin\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmax\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmedian\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124miqr\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mskew\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkurtosis\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshapiro\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Separate the Shapiro-Wilk test results into two columns\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# pivot_table[['shapiro_stat', 'shapiro_p']] = pd.DataFrame(pivot_table['shapiro'].tolist(), index=pivot_table.index)\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m pivot_table[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshapiro_stat\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mpivot_table\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshapiro_stat\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m# # Drop the original shapiro_test column\u001b[39;00m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# pivot_table = pivot_table.drop(columns=['shapiro'])\u001b[39;00m\n\u001b[1;32m     26\u001b[0m pivot_table\n",
-      "File \u001b[0;32m~/Downloads/github/.venv/lib/python3.12/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m~/Downloads/github/.venv/lib/python3.12/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'shapiro_stat'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>district</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>standard deviation</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "      <th>median</th>\n",
+       "      <th>iqr</th>\n",
+       "      <th>skew</th>\n",
+       "      <th>kurtosis</th>\n",
+       "      <th>Shapiro_stats</th>\n",
+       "      <th>Shapiro_p_value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Gombak</td>\n",
+       "      <td>4.440584</td>\n",
+       "      <td>3.606451</td>\n",
+       "      <td>0.007844</td>\n",
+       "      <td>14.894828</td>\n",
+       "      <td>3.337327</td>\n",
+       "      <td>4.937731</td>\n",
+       "      <td>0.969400</td>\n",
+       "      <td>-0.050979</td>\n",
+       "      <td>0.889896</td>\n",
+       "      <td>2.208564e-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Johor Bahru</td>\n",
+       "      <td>3.634853</td>\n",
+       "      <td>3.347368</td>\n",
+       "      <td>0.027453</td>\n",
+       "      <td>16.032705</td>\n",
+       "      <td>2.349377</td>\n",
+       "      <td>4.219763</td>\n",
+       "      <td>1.313299</td>\n",
+       "      <td>1.108875</td>\n",
+       "      <td>0.848968</td>\n",
+       "      <td>2.783878e-32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Kinta</td>\n",
+       "      <td>7.358301</td>\n",
+       "      <td>6.557695</td>\n",
+       "      <td>0.053119</td>\n",
+       "      <td>24.737210</td>\n",
+       "      <td>4.852479</td>\n",
+       "      <td>9.592342</td>\n",
+       "      <td>0.918674</td>\n",
+       "      <td>-0.309057</td>\n",
+       "      <td>0.873772</td>\n",
+       "      <td>3.765693e-33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Klang</td>\n",
+       "      <td>3.537567</td>\n",
+       "      <td>3.720585</td>\n",
+       "      <td>0.037973</td>\n",
+       "      <td>14.996997</td>\n",
+       "      <td>1.903555</td>\n",
+       "      <td>4.121292</td>\n",
+       "      <td>1.452885</td>\n",
+       "      <td>1.156979</td>\n",
+       "      <td>0.794781</td>\n",
+       "      <td>3.930190e-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Kota Kinabalu</td>\n",
+       "      <td>4.419318</td>\n",
+       "      <td>3.783152</td>\n",
+       "      <td>0.073595</td>\n",
+       "      <td>18.398427</td>\n",
+       "      <td>3.181167</td>\n",
+       "      <td>5.429778</td>\n",
+       "      <td>1.163423</td>\n",
+       "      <td>0.930961</td>\n",
+       "      <td>0.880028</td>\n",
+       "      <td>5.965255e-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Kuching</td>\n",
+       "      <td>10.259260</td>\n",
+       "      <td>7.406708</td>\n",
+       "      <td>0.072929</td>\n",
+       "      <td>34.587486</td>\n",
+       "      <td>8.741427</td>\n",
+       "      <td>10.417349</td>\n",
+       "      <td>0.861808</td>\n",
+       "      <td>0.184560</td>\n",
+       "      <td>0.931615</td>\n",
+       "      <td>3.740258e-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Petaling</td>\n",
+       "      <td>0.906497</td>\n",
+       "      <td>0.570048</td>\n",
+       "      <td>0.041307</td>\n",
+       "      <td>3.882908</td>\n",
+       "      <td>0.796657</td>\n",
+       "      <td>0.728455</td>\n",
+       "      <td>1.190089</td>\n",
+       "      <td>1.952003</td>\n",
+       "      <td>0.922584</td>\n",
+       "      <td>9.750883e-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Timur Laut</td>\n",
+       "      <td>1.858716</td>\n",
+       "      <td>1.204165</td>\n",
+       "      <td>0.066443</td>\n",
+       "      <td>4.654511</td>\n",
+       "      <td>1.736024</td>\n",
+       "      <td>1.968279</td>\n",
+       "      <td>0.424346</td>\n",
+       "      <td>-0.889370</td>\n",
+       "      <td>0.949329</td>\n",
+       "      <td>3.915816e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Ulu Langat</td>\n",
+       "      <td>5.716903</td>\n",
+       "      <td>5.115344</td>\n",
+       "      <td>0.052333</td>\n",
+       "      <td>18.704206</td>\n",
+       "      <td>4.093679</td>\n",
+       "      <td>8.314443</td>\n",
+       "      <td>0.754187</td>\n",
+       "      <td>-0.659912</td>\n",
+       "      <td>0.882227</td>\n",
+       "      <td>9.067180e-27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>W.P. Kuala Lumpur</td>\n",
+       "      <td>0.710739</td>\n",
+       "      <td>0.421291</td>\n",
+       "      <td>0.035236</td>\n",
+       "      <td>2.425707</td>\n",
+       "      <td>0.660009</td>\n",
+       "      <td>0.583882</td>\n",
+       "      <td>0.863324</td>\n",
+       "      <td>0.947616</td>\n",
+       "      <td>0.952678</td>\n",
+       "      <td>5.913180e-08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            district       mean  standard deviation       min        max  \\\n",
+       "0             Gombak   4.440584            3.606451  0.007844  14.894828   \n",
+       "1        Johor Bahru   3.634853            3.347368  0.027453  16.032705   \n",
+       "2              Kinta   7.358301            6.557695  0.053119  24.737210   \n",
+       "3              Klang   3.537567            3.720585  0.037973  14.996997   \n",
+       "4      Kota Kinabalu   4.419318            3.783152  0.073595  18.398427   \n",
+       "5            Kuching  10.259260            7.406708  0.072929  34.587486   \n",
+       "6           Petaling   0.906497            0.570048  0.041307   3.882908   \n",
+       "7         Timur Laut   1.858716            1.204165  0.066443   4.654511   \n",
+       "8         Ulu Langat   5.716903            5.115344  0.052333  18.704206   \n",
+       "9  W.P. Kuala Lumpur   0.710739            0.421291  0.035236   2.425707   \n",
+       "\n",
+       "     median        iqr      skew  kurtosis  Shapiro_stats  Shapiro_p_value  \n",
+       "0  3.337327   4.937731  0.969400 -0.050979       0.889896     2.208564e-22  \n",
+       "1  2.349377   4.219763  1.313299  1.108875       0.848968     2.783878e-32  \n",
+       "2  4.852479   9.592342  0.918674 -0.309057       0.873772     3.765693e-33  \n",
+       "3  1.903555   4.121292  1.452885  1.156979       0.794781     3.930190e-29  \n",
+       "4  3.181167   5.429778  1.163423  0.930961       0.880028     5.965255e-17  \n",
+       "5  8.741427  10.417349  0.861808  0.184560       0.931615     3.740258e-29  \n",
+       "6  0.796657   0.728455  1.190089  1.952003       0.922584     9.750883e-17  \n",
+       "7  1.736024   1.968279  0.424346 -0.889370       0.949329     3.915816e-05  \n",
+       "8  4.093679   8.314443  0.754187 -0.659912       0.882227     9.067180e-27  \n",
+       "9  0.660009   0.583882  0.863324  0.947616       0.952678     5.913180e-08  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -863,11 +1051,14 @@
     "\n",
     "# Separate the Shapiro-Wilk test results into two columns\n",
     "# pivot_table[['shapiro_stat', 'shapiro_p']] = pd.DataFrame(pivot_table['shapiro'].tolist(), index=pivot_table.index)\n",
-    "\n",
+    "for index, row in pivot_table.iterrows():\n",
+    "    # Some error cause by this\n",
+    "    pivot_table.loc[index, \"Shapiro_stats\"] = float(row[\"shapiro\"][0])\n",
+    "    pivot_table.loc[index, \"Shapiro_p_value\"] = float(row[\"shapiro\"][1])\n",
     "# # Drop the original shapiro_test column\n",
     "# pivot_table = pivot_table.drop(columns=['shapiro'])\n",
     "\n",
-    "pivot_table"
+    "pivot_table.drop(columns=\"shapiro\")"
    ]
   },
   {
