--- a/clean_spm.ipynb
+++ b/clean_spm.ipynb
@@ -791,6 +791,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'District Name': 8510,\n",
+       " 'Count of Points': 5.851097247034114,\n",
+       " 'Mean': 6.085165955355608,\n",
+       " 'Standard Deviation': 0.0078435039034385,\n",
+       " 'Min': 34.58748594290303,\n",
+       " 'Max': 3.481661159430585,\n",
+       " 'Median': 7.6348437752927305,\n",
+       " 'Inter-Quarter Range': 1.4928812083610097,\n",
+       " 'Skew': 2.0336405356623164}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class map:\n",
+    "    _summary_column_name = [\"District Name\", \"Count of Points\", \"Mean\", \"Standard Deviation\", \"Min\", \"Max\", \"Median\", \"Inter-Quarter Range\", \"Skew\", \"Kurtosis\", \"shapiro\"]\n",
+    "    _summary_function_list = [len, np.mean, np.std, min, max, np.median, iqr, skew, kurtosis, shapiro]\n",
+    "\n",
+    "answer_dict = dict(zip(map._summary_column_name[:-1],\n",
+    "                      [[formula(target_population[\"distance\"])] for formula in map._summary_function_list[:-1]]))\n",
+    "answer_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
