error in descriptive analysis

--- a/clean_spm.ipynb
+++ b/clean_spm.ipynb
@@ -791,24 +791,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wh0102/Downloads/github/.venv/lib/python3.12/site-packages/scipy/stats/_axis_nan_policy.py:573: UserWarning:\n",
+      "\n",
+      "scipy.stats.shapiro: For N > 5000, computed p-value may not be accurate. Current N is 8510.\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Count of Points</th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Standard Deviation</th>\n",
+       "      <th>Min</th>\n",
+       "      <th>Max</th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Inter-Quarter Range</th>\n",
+       "      <th>Skew</th>\n",
+       "      <th>Kurtosis</th>\n",
+       "      <th>Shapiro Stats</th>\n",
+       "      <th>Shapiro p value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10 District</th>\n",
+       "      <td>8510</td>\n",
+       "      <td>5.851097</td>\n",
+       "      <td>6.085166</td>\n",
+       "      <td>0.007844</td>\n",
+       "      <td>34.587486</td>\n",
+       "      <td>3.481661</td>\n",
+       "      <td>7.634844</td>\n",
+       "      <td>1.492881</td>\n",
+       "      <td>2.033641</td>\n",
+       "      <td>0.826765</td>\n",
+       "      <td>5.640144e-70</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'District Name': 8510,\n",
-       " 'Count of Points': 5.851097247034114,\n",
-       " 'Mean': 6.085165955355608,\n",
-       " 'Standard Deviation': 0.0078435039034385,\n",
-       " 'Min': 34.58748594290303,\n",
-       " 'Max': 3.481661159430585,\n",
-       " 'Median': 7.6348437752927305,\n",
-       " 'Inter-Quarter Range': 1.4928812083610097,\n",
-       " 'Skew': 2.0336405356623164}"
+       "             Count of Points      Mean  Standard Deviation       Min  \\\n",
+       "10 District             8510  5.851097            6.085166  0.007844   \n",
+       "\n",
+       "                   Max    Median  Inter-Quarter Range      Skew  Kurtosis  \\\n",
+       "10 District  34.587486  3.481661             7.634844  1.492881  2.033641   \n",
+       "\n",
+       "             Shapiro Stats  Shapiro p value  \n",
+       "10 District       0.826765     5.640144e-70  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,9 +878,14 @@
     "    _summary_column_name = [\"District Name\", \"Count of Points\", \"Mean\", \"Standard Deviation\", \"Min\", \"Max\", \"Median\", \"Inter-Quarter Range\", \"Skew\", \"Kurtosis\", \"shapiro\"]\n",
     "    _summary_function_list = [len, np.mean, np.std, min, max, np.median, iqr, skew, kurtosis, shapiro]\n",
     "\n",
-    "answer_dict = dict(zip(map._summary_column_name[:-1],\n",
+    "answer_dict = dict(zip(map._summary_column_name[1:-1],\n",
     "                      [[formula(target_population[\"distance\"])] for formula in map._summary_function_list[:-1]]))\n",
-    "answer_dict"
+    "\n",
+    "# Count shapiro first\n",
+    "shapiro_value = shapiro(target_population[\"distance\"])\n",
+    "\n",
+    "answer_dict[\"Shapiro Stats\"] = shapiro_value[0]\n",
+    "answer_dict[\"Shapiro p value\"] = shapiro_value[1]\n"
    ]
   },
   {
